--- a/Frontend/src/components/Organisms/Sidebar/Sidebar.scss
+++ b/Frontend/src/components/Organisms/Sidebar/Sidebar.scss
@@ -1,8 +1,4 @@
-$primary:#004e98;
-$primary-light:#3a6ea5;
-$secondary:#ff6700;
-$gray:#c0c0c0;
-$white:#ebebeb;
+@import '../../../constants/Colors.scss';
 
 .SidebarWrapper {
     height: 10vh;
