--- a/Frontend/src/components/Atoms/Button/Button.scss
+++ b/Frontend/src/components/Atoms/Button/Button.scss
@@ -1,12 +1,13 @@
 @import '../../../constants/Colors.scss';
 
 .MainButton{
-    padding: 5px 15px;
+    padding: 15px 25px;
     background-color: $secondary;
+    font-size: 16px;
     color:white;
     border:none;
-    border-radius: 8px;
-    transition: background-color 0.25s cubic-bezier(0.6, -0.28, 0.735, 0.045);
+    border-radius: 5px;
+    transition: background-color 0.15s cubic-bezier(0.6, -0.28, 0.735, 0.045);
 
     &:focus{
         outline: none;
