--- a/Frontend/src/views/NewSetView/NewSetView.scss
+++ b/Frontend/src/views/NewSetView/NewSetView.scss
@@ -5,4 +5,18 @@
     padding: 2rem;
     width: 100%;
     height: 90vh;
+    position: relative;
 }
+
+.rightTopPosition{
+    position: absolute;
+    right: 10px;
+    top:10px;
+}
+
+.titleAndDescriptionWrapper{
+    margin-top: 2rem;
+    width: 50%;
+}
+
+
